--- a/pizza1.html
+++ b/pizza1.html
@@ -3,7 +3,26 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
+        <script>
+            //alert("Hello");
+            let myArray = sessionStorage.getItem('myArray');
+            sessionStorage.clear();
+            let myObject = JSON.parse(myArray);
+            alert(myObject[0][0]);
+            let pizza_type= myObject[0][0];
+            let pizza_picture = myObject[1][0];
+        </script>
     </head>
-    <body>
-        
+    <body onload="set_attr();">
+        <div>
+            <img id="first" src="" alt="">
+        </div>        
+        <script type="text/javascript">
+            function set_attr()
+            {
+                //var fieldValue= document.getElementById('first').value;
+                document.getElementById("first").setAttribute('src',pizza_picture);
+                document.getElementById("first").setAttribute('alt',pizza_type);                
+            }
+        </script>
     </body>
