--- a/pizza1.html
+++ b/pizza1.html
@@ -2,11 +2,11 @@
 <html land = "ru">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style1.css">
         <script>
             //alert("Hello");
             let myArray = sessionStorage.getItem('myArray');
-            sessionStorage.clear();
+            //sessionStorage.clear();
             let myObject = JSON.parse(myArray);
             alert(myObject[0][0]);
             let pizza_type= myObject[0][0];
@@ -14,15 +14,15 @@
         </script>
     </head>
     <body onload="set_attr();">
-        <div>
-            <img id="first" src="" alt="">
+        <div class="image">
+            <img id="first" src="" title="">
         </div>        
         <script type="text/javascript">
             function set_attr()
             {
                 //var fieldValue= document.getElementById('first').value;
                 document.getElementById("first").setAttribute('src',pizza_picture);
-                document.getElementById("first").setAttribute('alt',pizza_type);                
+                document.getElementById("first").setAttribute('title',pizza_type);                
             }
         </script>
     </body>
