--- a/pizza10.html
+++ b/pizza10.html
@@ -8,7 +8,7 @@
             let myArray = sessionStorage.getItem('myArray');
             //sessionStorage.clear();
             let myObject = JSON.parse(myArray);
-            alert(myObject[0][9]);
+            //alert(myObject[0][9]);
             let pizza_type= myObject[0][9];
             let pizza_picture = myObject[1][9];
          let base = 380;
