--- a/pizza2.html
+++ b/pizza2.html
@@ -9,7 +9,7 @@
         let myArray = sessionStorage.getItem('myArray');
         //sessionStorage.clear();
         let myObject = JSON.parse(myArray);
-        alert(myObject[1][1]);
+        //alert(myObject[1][1]);
         let pizza_type = myObject[0][1];
         let pizza_picture = myObject[1][1];
         let base = 380;
