--- a/pizza6.html
+++ b/pizza6.html
@@ -9,7 +9,7 @@
         let myArray = sessionStorage.getItem('myArray');
         //sessionStorage.clear();
         let myObject = JSON.parse(myArray);
-        alert(myObject[0][5]);
+        //alert(myObject[0][5]);
         let pizza_type = myObject[0][5];
         let pizza_picture = myObject[1][5];
         let base = 380;
