--- a/pizza12.html
+++ b/pizza12.html
@@ -8,7 +8,7 @@
             let myArray = sessionStorage.getItem('myArray');
             //sessionStorage.clear();
             let myObject = JSON.parse(myArray);
-            alert(myObject[0][11]);
+            //alert(myObject[0][11]);
             let pizza_type= myObject[0][11];
             let pizza_picture = myObject[1][11];
         let base = 380;
