--- a/pizza13.html
+++ b/pizza13.html
@@ -8,7 +8,7 @@
             let myArray = sessionStorage.getItem('myArray');
             //sessionStorage.clear();
             let myObject = JSON.parse(myArray);
-            alert(myObject[0][12]);
+            //alert(myObject[0][12]);
             let pizza_type= myObject[0][12];
             let pizza_picture = myObject[1][12];
         let base = 380;
