--- a/pizza14.html
+++ b/pizza14.html
@@ -8,7 +8,7 @@
             let myArray = sessionStorage.getItem('myArray');
             //sessionStorage.clear();
             let myObject = JSON.parse(myArray);
-            alert(myObject[0][13]);
+            //alert(myObject[0][13]);
             let pizza_type= myObject[0][13];
             let pizza_picture = myObject[1][13];
         let base = 380;
