--- a/pizza3.html
+++ b/pizza3.html
@@ -9,7 +9,7 @@
         let myArray = sessionStorage.getItem('myArray');
         //sessionStorage.clear();
         let myObject = JSON.parse(myArray);
-        alert(myObject[0][2]);
+        //alert(myObject[0][2]);
         let pizza_type = myObject[0][2];
         let pizza_picture = myObject[1][2];
         let base = 380;
