--- a/pizza4.html
+++ b/pizza4.html
@@ -9,7 +9,7 @@
         let myArray = sessionStorage.getItem('myArray');
         //sessionStorage.clear();
         let myObject = JSON.parse(myArray);
-        alert(myObject[0][3]);
+        //alert(myObject[0][3]);
         let pizza_type = myObject[0][3];
         let pizza_picture = myObject[1][3];
         let base = 380;
