--- a/pizza5.html
+++ b/pizza5.html
@@ -8,7 +8,7 @@
             let myArray = sessionStorage.getItem('myArray');
             //sessionStorage.clear();
             let myObject = JSON.parse(myArray);
-            alert(myObject[0][4]);
+            //alert(myObject[0][4]);
             let pizza_type= myObject[0][4];
             let pizza_picture = myObject[1][4];
         let base = 380;
