--- a/pizza7.html
+++ b/pizza7.html
@@ -8,7 +8,7 @@
             let myArray = sessionStorage.getItem('myArray');
             //sessionStorage.clear();
             let myObject = JSON.parse(myArray);
-            alert(myObject[0][6]);
+            //alert(myObject[0][6]);
             let pizza_type= myObject[0][6];
             let pizza_picture = myObject[1][6];
          let base = 380;
