--- a/pizza8.html
+++ b/pizza8.html
@@ -8,7 +8,7 @@
             let myArray = sessionStorage.getItem('myArray');
             //sessionStorage.clear();
             let myObject = JSON.parse(myArray);
-            alert(myObject[0][7]);
+            //alert(myObject[0][7]);
             let pizza_type= myObject[0][7];
             let pizza_picture = myObject[1][7];
          let base = 380;
