--- a/pizza9.html
+++ b/pizza9.html
@@ -8,7 +8,7 @@
             let myArray = sessionStorage.getItem('myArray');
             //sessionStorage.clear();
             let myObject = JSON.parse(myArray);
-            alert(myObject[0][8]);
+            //alert(myObject[0][8]);
             let pizza_type= myObject[0][8];
             let pizza_picture = myObject[1][8];
          let base = 380;
